# qt_demo-bk

./: CMakeLists.txt  main.cpp  music.cpp  music.h  music.pro  res.qrc  style.qss
doc/: log.md  program.md
etc/: config.json
libs/: CMakeLists.txt
resources/: res.qrc
resources/lang/: test.txt
src/: CMakeLists.txt  System.cpp  System.h  main.cpp  widget.cpp  widget.h  widget.ui
src/task/: FileMonitor.cpp  FileMonitor.h  FileProcessTask.cpp  SyncTask.h
test/: CMakeLists.txt  FileMonitorTest.cpp  test_example.cpp
